--- a/WhatWearToday/Info.plist
+++ b/WhatWearToday/Info.plist
@@ -30,6 +30,11 @@
 	<string>$(PRODUCT_NAME) will use the photo to display in the main list</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) will use the photo to display in the main list</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
