Locations services working fine Fetching weather information by longitude and latitude

--- a/WhatWearToday/Info.plist
+++ b/WhatWearToday/Info.plist
@@ -30,6 +30,8 @@
 	<string>$(PRODUCT_NAME) will use the photo to display in the main list</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) will use the photo to display in the main list</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>$(PRODUCT_NAME) will use your location to show you the weather</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
